--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ static_cell = "2.0.0"
 ssd1306 = "0.10.0"
 embedded-graphics = "0.8.1"
 
-# [profile.dev]
-# opt-level = "s"
+[profile.dev]
+opt-level = "s"
 
-# [profile.release]
-# debug = 2
+[profile.release]
+debug = 2
