--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ nb = "1.0.0"
 static_cell = "2.0.0"
 ssd1306 = "0.10.0"
 embedded-graphics = "0.8.1"
+# my driver need!!
+embedded-hal-async = "1.0.0"
 
 [profile.dev]
 opt-level = "s"
