--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,9 +1,9 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-# replace STM32F103C8 with your chip as listed in `probe-rs chip list`
-runner = "probe-rs run --chip STM32F103C8"
+# replace nRF82840_xxAA with your chip as listed in `probe-rs chip list`
+runner = "probe-rs run --chip nRF52840_xxAA"
 
 [build]
-target = "thumbv7m-none-eabi"
+target = "thumbv7em-none-eabi"
 
 [env]
 DEFMT_LOG = "trace"
