--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,39 @@
 [package]
-name = "iic-pi"
+edition = "2021"
+name = "embassy-nrf52840-examples"
 version = "0.1.0"
-edition = "2024"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
-# Change stm32f103c8 to your chip name, if necessary.
-embassy-stm32 = { version = "0.2.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any"]  }
-embassy-sync = { version = "0.6.2",features = ["defmt"] }
-embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
-embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
-embassy-usb = { version = "0.4.0", features = ["defmt"] }
 embassy-futures = { version = "0.1.0" }
+embassy-sync = { version = "0.7.0",  features = ["defmt"] }
+embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
+embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
+embassy-nrf = { version = "0.3.1", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
+embassy-net = { version = "0.7.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
+embassy-usb = { version = "0.4.0",  features = ["defmt"] }
+embedded-io = { version = "0.6.0", features = ["defmt-03"]  }
+embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
+embassy-net-esp-hosted = { version = "0.2.0", features = ["defmt"] }
+embassy-net-enc28j60 = { version = "0.2.0",  features = ["defmt"] }
 
 defmt = "1.0.1"
 defmt-rtt = "1.0.0"
 
+fixed = "1.10.0"
+static_cell = { version = "2" }
 cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
 cortex-m-rt = "0.7.0"
-embedded-hal = "0.2.6"
 panic-probe = { version = "1.0.0", features = ["print-defmt"] }
-heapless = { version = "0.8", default-features = false }
-nb = "1.0.0"
-static_cell = "2.0.0"
-ssd1306 = "0.10.0"
-embedded-graphics = "0.8.1"
-# my driver need!!
-embedded-hal-async = "1.0.0"
-
-[profile.dev]
-opt-level = "s"
+rand = { version = "0.9.0", default-features = false }
+embedded-storage = "0.3.1"
+usbd-hid = "0.8.1"
+serde = { version = "1.0.136", default-features = false }
+embedded-hal = { version = "1.0" }
+embedded-hal-async = { version = "1.0" }
+embedded-hal-bus = { version = "0.1", features = ["async"] }
+num-integer = { version = "0.1.45", default-features = false }
+microfft = "0.5.0"
 
 [profile.release]
 debug = 2
