--- a/esp32-wifi/Cargo.toml
+++ b/esp32-wifi/Cargo.toml
@@ -38,6 +38,7 @@ esp-wifi = { version = "0.14.1", features = [
   "esp32c3",
   "smoltcp",
   "wifi",
+  "defmt",
 ] }
 smoltcp = { version = "0.12.0", default-features = false, features = [
   "medium-ethernet",
@@ -50,6 +51,8 @@ smoltcp = { version = "0.12.0", default-features = false, features = [
   "socket-raw",
   "socket-tcp",
   "socket-udp",
+  "defmt",
+
 ] }
 static_cell = { version = "2.1.0", features = ["nightly"] }
 defmt = "1.0.1"
