--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ ssd1306 = "0.10.0"
 embedded-graphics = "0.8.1"
 # my driver need!!
 embedded-hal-async = "1.0.0"
+st7789 = "0.7.0"
+display-interface-spi = "0.4.0"
 
 [profile.dev]
 opt-level = "s"
